# jetpacks

./: .gitignore  README.md  aosp.jks  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.plugins/: jump2currentActivitySourceFile.plugin.kts
activity-monitor/: build.gradle.kts
activity-monitor/src/main/: AndroidManifest.xml
android-rpc/: build.gradle.kts
android-rpc/src/main/: AndroidManifest.xml
android-thread-affinity/: build.gradle.kts
android-thread-affinity/src/main/cpp/: CMakeLists.txt  main.cpp
app/: build.gradle  build.gradle.kts  google-services.json
app-host/: build.gradle.kts
app-host/src/main/: AndroidManifest.xml
app-plugins/: build.gradle.kts
app-plugins/src/main/: AndroidManifest.xml
app-widgets/: build.gradle.kts
app-widgets/src/main/: AndroidManifest.xml
app/benchmark/: build.gradle.kts
app/libs/: viewbinding-release.aar
app/macrobenchmark/: build.gradle.kts
app/macrobenchmark/src/main/: AndroidManifest.xml
app/microbenchmark/: build.gradle.kts
app/microbenchmark/src/androidTest/: AndroidManifest.xml
app/microbenchmark/src/main/: AndroidManifest.xml
app/schemas/com.genlz.jetpacks.persistence.ThumbsDb/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: css_pixel_2_device_pixel.js  image_listener_hook.js  image_listenr_hook.js  injection.js  (+1 more)
app/src/main/cpp/: CMakeLists.txt  ComputePipeline.cpp  ComputePipeline.h  ImageProcessor.cpp  ImageProcessor.h  RsMigration_jni.cpp  Utils.h  VulkanContext.cpp  VulkanContext.h  VulkanResources.cpp  VulkanResources.h  jetpacks.cpp
app/src/main/cpp/lib/includes/: libnative_api.h
buildSrc/: build.gradle.kts
gallery/: build.gradle
gallery/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
java-lib/: build.gradle.kts
javascript/: build.gradle.kts
javascript-bridge/: build.gradle.kts
javascript-bridge-compiler/: build.gradle.kts
microbenchmark/: build.gradle.kts
native/: build.gradle.kts
native/src/androidMain/: AndroidManifest.xml
native/src/main/rust/: Cargo.toml
native/src/main/rust/benches/: my_benchmark.rs
native/src/main/rust/src/: lib.rs
pseudo-android/: build.gradle.kts
pseudo-android/src/main/: AndroidManifest.xml
share/: build.gradle.kts
share/src/main/: AndroidManifest.xml
view-binding/: build.gradle.kts
vulkan/: build.gradle  build.gradle.kts
vulkan/src/main/: AndroidManifest.xml
webview/: build.gradle.kts
webview/src/main/: AndroidManifest.xml
(+320 files in other folders)
