[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.0"

# This dependency will only be included when targeting Android
#[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.0"
log = "0.4.17"
core_affinity = "0.8.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "rust"
