[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
zip = "0.6.4"
regex = "1.8.1"
memmap = "0.7.0"
rand = "0.8.5"
core_affinity = "0.8.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "rust"

#[profile.dev]
#opt-level = 3

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false